--- a/PmuMentor-CSS.css
+++ b/PmuMentor-CSS.css
@@ -70,18 +70,18 @@ button:hover {
 .login-box {
     width: 300px;
     margin: 0 auto;
-    padding: 100px;
+    padding: 20px;
     border: none; /* Remove default border */
-    border-radius: 5px;
-    background-color: #032542; /* Blue background color */
+    border-radius: 8px;
+    background-color: #fff;/* Blue background color */
     color: #fff; /* Text color white */
 }
 
 .signup-btn,
 .login-btn {
-    padding: 10px 20px;
+    padding: 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
     background-color: #ED6C27;
@@ -110,8 +110,8 @@ input[type="password"] {
 .signup-box {
     width: 300px;
     margin: 0 auto;
-    padding: 20px;
-    border: none;
+    padding: 10px;
+    border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #032542;
     color: #fff;
